--- a/src/main/resources/META-INF/resources/css/style.css
+++ b/src/main/resources/META-INF/resources/css/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -10,13 +10,29 @@ body{
     background-size: cover;
 }
 
-.leftPanel{
+.leftPanel {
     float: left;
     width: 30%;
 }
 
-.rightPanel{
+.rightPanel {
     float: right;
     width: 70%;
-    margin-top: 50px
+}
+
+.rightPanel table{
+ margin: 0 auto;
+}
+
+.form {
+    position: relative;
+    margin: 50px auto;
+    width: 380px;
+    height: auto;
+}
+
+.button {
+    position: absolute;
+    top: 10px;
+    right: -125px;
 }
